-
Bug
-
Resolution: Done
-
P4: Low
-
5.10.0
-
None
-
f98ee77cd3e9964b995d063345a895e537bc1157
This affects all to(U)Int() and toFloat() functions:
- QByteArray does not allow leading/trailing whitespaces (converts the string to 0)
- QString/QLocale does allow leading/trailing whitespaces (converts the string to it's number representation)
Expected behavior: whitespaces should be ignored in the QByteArray functions also.
- is required for
-
QTBUG-66115 Let (QString|QLocale)::toFloat ignore trailing non-digits
-
- Open
-
- relates to
-
QTBUG-6095 QDoubleValidator does not accept whitespace before and after a double value in the QString while QString::toDouble() does
-
- Open
-