src/corelib/tools/qlocale_tools.cpp
@@ -278,7 +278,7 @@ void doubleToAscii(double d, QLocaleData::DoubleForm form, int precision, char *
 }
 
 double asciiToDouble(const char *num, int numLen, bool &ok, int &processed,
-                     TrailingJunkMode trailingJunkMode)
+                     StrayCharacterMode strayCharMode)
 {
     if (*num == '\0') {
         ok = false;
@@ -315,9 +315,13 @@ double asciiToDouble(const char *num, int numLen, bool &ok, int &processed,
 
     double d = 0.0;
 #if !defined(QT_NO_DOUBLECONVERSION) && !defined(QT_BOOTSTRAPPED)
-    int conv_flags = (trailingJunkMode == TrailingJunkAllowed) ?
-                double_conversion::StringToDoubleConverter::ALLOW_TRAILING_JUNK :
-                double_conversion::StringToDoubleConverter::NO_FLAGS;
+    int conv_flags = double_conversion::StringToDoubleConverter::NO_FLAGS;
+    if (strayCharMode == TrailingJunkAllowed) {
+        conv_flags = double_conversion::StringToDoubleConverter::ALLOW_TRAILING_JUNK;
+    } else if (strayCharMode == WhitespacesAllowed) {
+        conv_flags = double_conversion::StringToDoubleConverter::ALLOW_LEADING_SPACES
+                | double_conversion::StringToDoubleConverter::ALLOW_TRAILING_SPACES;
+    }
     double_conversion::StringToDoubleConverter conv(conv_flags, 0.0, qt_snan(), 0, 0);
     d = conv.StringToDouble(num, numLen, &processed);
 
@@ -336,7 +340,7 @@ double asciiToDouble(const char *num, int numLen, bool &ok, int &processed,
     if (qDoubleSscanf(num, QT_CLOCALE, "%lf%n", &d, &processed) < 1)
         processed = 0;
 
-    if ((trailingJunkMode == TrailingJunkProhibited && processed != numLen) || qIsNaN(d)) {
+    if ((strayCharMode == TrailingJunkProhibited && processed != numLen) || qIsNaN(d)) {
         // Implementation defined nan symbol or garbage found. We don't accept it.
         processed = 0;
         ok = false;
@@ -361,7 +365,7 @@ double asciiToDouble(const char *num, int numLen, bool &ok, int &processed,
 #endif // !defined(QT_NO_DOUBLECONVERSION) && !defined(QT_BOOTSTRAPPED)
 
     // Otherwise we would have gotten NaN or sorted it out above.
-    Q_ASSERT(trailingJunkMode == TrailingJunkAllowed || processed == numLen);
+    Q_ASSERT(strayCharMode == TrailingJunkAllowed || processed == numLen);
 
     // Check if underflow has occurred.
     if (isZero(d)) {
